changed JoSashForm - implementation