@@ -28,8 +28,6 @@
 
 package org.jowidgets.spi.impl.swt.widgets.internal.base;
 
-import java.util.List;
-
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.graphics.Rectangle;
@@ -62,28 +60,33 @@ class JoSashFormLayout extends Layout {
 			return;
 		}
 
-		final List<Control> newControls = sashForm.getControls(true);
-		if (sashForm.getControls().size() == 0 && newControls.size() == 0) {
-			return;
-		}
-		sashForm.setControls(newControls);
+		sashForm.initializeControls(true);
 
-		final List<Control> controls = sashForm.getControls();
+		final Control first = sashForm.getFirst();
+		final Control second = sashForm.getSecond();
 
 		if (sashForm.getMaxControl() != null && !sashForm.getMaxControl().isDisposed()) {
-			for (final Control ctrl : controls) {
-				if (ctrl != sashForm.getMaxControl()) {
-					ctrl.setBounds(-200, -200, 0, 0);
+			if (first != null) {
+				if (first != sashForm.getMaxControl()) {
+					first.setBounds(-200, -200, 0, 0);
 				}
 				else {
-					ctrl.setBounds(area);
+					first.setBounds(area);
+				}
+			}
+			if (second != null) {
+				if (second != sashForm.getMaxControl()) {
+					second.setBounds(-200, -200, 0, 0);
+				}
+				else {
+					second.setBounds(area);
 				}
 			}
 			return;
 		}
 
-		if (controls.size() == 1) {
-			controls.get(0).setBounds(area);
+		if (first != null && second == null) {
+			first.setBounds(area);
 			return;
 		}
 
@@ -105,26 +108,27 @@ class JoSashFormLayout extends Layout {
 	}
 
 	private void stretchBoth(final JoSashForm sashForm) {
-		final List<Control> controls = sashForm.getControls();
+		final Control first = sashForm.getFirst();
+		final Control second = sashForm.getSecond();
 		final Rectangle area = sashForm.getClientArea();
-		final int[] weights = sashForm.getWeights();
-		final int total = weights[0] + weights[1];
+		final int firstWeight = sashForm.getFirstWeight();
+		final int total = firstWeight + sashForm.getSecondWeight();
 
 		if (sashForm.getOrientation() == SWT.HORIZONTAL) {
 
 			int x = 0;
-			int newSize = controls.get(0).getBounds().width;
+			int newSize = first.getBounds().width;
 
-			final int toAdd = (int) ((area.width - oldSize.x) * ((float) weights[0] / (float) total) + ((float) sashForm.getSashWidth() / 2));
+			final int toAdd = (int) ((area.width - oldSize.x) * ((float) firstWeight / (float) total) + ((float) sashForm.getSashWidth() / 2));
 			newSize += toAdd;
 
 			if (newSize < JoSashForm.DRAG_MINIMUM) {
 				newSize = (int) ((JoSashForm.DRAG_MINIMUM - (float) sashForm.getSashWidth()) / 2);
 			}
 
-			controls.get(0).setBounds(area.x, area.y, newSize, area.height);
+			first.setBounds(area.x, area.y, newSize, area.height);
 
-			x += controls.get(0).getBounds().width;
+			x += first.getBounds().width;
 
 			if (sashForm.getSash() == null) {
 				return;
@@ -134,31 +138,29 @@ class JoSashFormLayout extends Layout {
 
 			x += sashForm.getSashWidth();
 
-			newSize = area.width - controls.get(0).getBounds().width - sashForm.getSashWidth();
+			newSize = area.width - first.getBounds().width - sashForm.getSashWidth();
 
 			if (newSize < JoSashForm.DRAG_MINIMUM) {
 				newSize = (int) ((JoSashForm.DRAG_MINIMUM - (float) sashForm.getSashWidth()) / 2);
 			}
 
-			controls.get(1).setBounds(x, area.y, newSize, area.height);
+			second.setBounds(x, area.y, newSize, area.height);
 
 		}
 		else {
 
 			int y = 0;
-			int newSize = controls.get(0).getBounds().height;
+			int newSize = first.getBounds().height;
 
-			final int toAdd = (int) ((area.height - oldSize.y) * ((float) weights[0] / (float) total) + ((float) sashForm.getSashWidth() / 2));
+			final int toAdd = (int) ((area.height - oldSize.y) * ((float) firstWeight / (float) total) + ((float) sashForm.getSashWidth() / 2));
 			newSize += toAdd;
 
 			if (newSize < JoSashForm.DRAG_MINIMUM) {
 				newSize = (int) ((JoSashForm.DRAG_MINIMUM - (float) sashForm.getSashWidth()) / 2);
 			}
 
-			controls.get(0).setBounds(area.x, area.y, area.width, newSize);
-			y += controls.get(0).getBounds().height;
-
-			sashForm.setSash(sashForm.createSash());
+			first.setBounds(area.x, area.y, area.width, newSize);
+			y += first.getBounds().height;
 
 			if (sashForm.getSash() == null) {
 				return;
@@ -169,19 +171,20 @@ class JoSashFormLayout extends Layout {
 
 			y += sashForm.getSashWidth();
 
-			newSize = area.height - controls.get(0).getBounds().height - sashForm.getSashWidth();
+			newSize = area.height - first.getBounds().height - sashForm.getSashWidth();
 
 			if (newSize < JoSashForm.DRAG_MINIMUM) {
 				newSize = (int) ((JoSashForm.DRAG_MINIMUM - (float) sashForm.getSashWidth()) / 2);
 			}
 
-			controls.get(1).setBounds(area.x, y, area.width, newSize);
+			second.setBounds(area.x, y, area.width, newSize);
 		}
 		oldSize = new Point(area.width, area.height);
 	}
 
 	private void stretchFirst(final JoSashForm sashForm) {
-		final List<Control> controls = sashForm.getControls();
+		final Control first = sashForm.getFirst();
+		final Control second = sashForm.getSecond();
 		final Rectangle area = sashForm.getClientArea();
 		int newWidth = 0;
 		int secondSize;
@@ -195,7 +198,7 @@ class JoSashFormLayout extends Layout {
 			int x = area.x;
 
 			if (save <= 0) {
-				newWidth = area.width - sashForm.getSashWidth() - controls.get(1).getBounds().width;
+				newWidth = area.width - sashForm.getSashWidth() - second.getBounds().width;
 			}
 			else {
 				newWidth = area.width - sashForm.getSashWidth() - save;
@@ -205,7 +208,7 @@ class JoSashFormLayout extends Layout {
 				newWidth = ((JoSashForm.DRAG_MINIMUM));
 
 				if (save <= 0) {
-					save = controls.get(1).getBounds().width;
+					save = second.getBounds().width;
 				}
 				secondSize = area.width - sashForm.getSashWidth() - newWidth;
 			}
@@ -215,25 +218,25 @@ class JoSashFormLayout extends Layout {
 					save = 0;
 				}
 				else {
-					secondSize = controls.get(1).getBounds().width;
+					secondSize = second.getBounds().width;
 				}
 
 			}
 
-			controls.get(0).setBounds(x, area.y, newWidth, area.height);
+			first.setBounds(x, area.y, newWidth, area.height);
 
-			x += controls.get(0).getBounds().width + sashForm.getSashWidth();
+			x += first.getBounds().width + sashForm.getSashWidth();
 
-			controls.get(1).setBounds(x, area.y, secondSize, area.height);
+			second.setBounds(x, area.y, secondSize, area.height);
 
-			sash.setBounds(controls.get(0).getBounds().width, area.y, sashForm.getSashWidth(), area.height);
+			sash.setBounds(first.getBounds().width, area.y, sashForm.getSashWidth(), area.height);
 
 		}
 		else {
 			int y = area.y;
 
 			if (save <= 0) {
-				newWidth = area.height - sashForm.getSashWidth() - controls.get(1).getBounds().height;
+				newWidth = area.height - sashForm.getSashWidth() - second.getBounds().height;
 			}
 			else {
 				newWidth = area.height - sashForm.getSashWidth() - save;
@@ -242,7 +245,7 @@ class JoSashFormLayout extends Layout {
 			if (newWidth < JoSashForm.DRAG_MINIMUM) {
 				newWidth = (int) ((JoSashForm.DRAG_MINIMUM - (float) sashForm.getSashWidth()) / 2);
 				if (save <= 0) {
-					save = controls.get(1).getBounds().height;
+					save = second.getBounds().height;
 				}
 				secondSize = area.height - sashForm.getSashWidth() - newWidth;
 			}
@@ -252,22 +255,23 @@ class JoSashFormLayout extends Layout {
 					save = 0;
 				}
 				else {
-					secondSize = controls.get(1).getBounds().height;
+					secondSize = second.getBounds().height;
 				}
 
 			}
 
-			controls.get(0).setBounds(area.x, area.y, area.width, newWidth);
-			y += controls.get(0).getBounds().height + sashForm.getSashWidth();
-			controls.get(1).setBounds(area.x, y, area.width, controls.get(1).getBounds().height);
+			first.setBounds(area.x, area.y, area.width, newWidth);
+			y += first.getBounds().height + sashForm.getSashWidth();
+			second.setBounds(area.x, y, area.width, second.getBounds().height);
 
-			sash.setBounds(area.x, controls.get(0).getBounds().height, area.width, sashForm.getSashWidth());
+			sash.setBounds(area.x, first.getBounds().height, area.width, sashForm.getSashWidth());
 		}
 
 	}
 
 	private void stretchSecond(final JoSashForm sashForm) {
-		final List<Control> controls = sashForm.getControls();
+		final Control first = sashForm.getFirst();
+		final Control second = sashForm.getSecond();
 		final Rectangle area = sashForm.getClientArea();
 		int newWidth = 0;
 		int firstSize = 0;
@@ -280,7 +284,7 @@ class JoSashFormLayout extends Layout {
 		if (sashForm.getOrientation() == SWT.HORIZONTAL) {
 			int x = area.x;
 			if (save <= 0) {
-				newWidth = area.width - sashForm.getSashWidth() - controls.get(0).getBounds().width;
+				newWidth = area.width - sashForm.getSashWidth() - first.getBounds().width;
 			}
 			else {
 				newWidth = area.width - sashForm.getSashWidth() - save;
@@ -289,7 +293,7 @@ class JoSashFormLayout extends Layout {
 			if (newWidth < JoSashForm.DRAG_MINIMUM) {
 				newWidth = JoSashForm.DRAG_MINIMUM;
 				if (save <= 0) {
-					save = controls.get(0).getBounds().width;
+					save = first.getBounds().width;
 				}
 				firstSize = area.width - sashForm.getSashWidth() - JoSashForm.DRAG_MINIMUM;
 			}
@@ -299,22 +303,22 @@ class JoSashFormLayout extends Layout {
 					save = 0;
 				}
 				else {
-					firstSize = controls.get(0).getBounds().width;
+					firstSize = first.getBounds().width;
 				}
 
 			}
-			controls.get(0).setBounds(area.x, area.y, firstSize, area.height);
+			first.setBounds(area.x, area.y, firstSize, area.height);
 
-			x = area.x + controls.get(0).getBounds().width + sashForm.getSashWidth();
+			x = area.x + first.getBounds().width + sashForm.getSashWidth();
 
-			controls.get(1).setBounds(x, area.y, newWidth, area.height);
+			second.setBounds(x, area.y, newWidth, area.height);
 
-			sash.setBounds(controls.get(0).getBounds().width, area.y, sashForm.getSashWidth(), area.height);
+			sash.setBounds(first.getBounds().width, area.y, sashForm.getSashWidth(), area.height);
 		}
 		else {
 			int y = area.y;
 			if (save <= 0) {
-				newWidth = area.height - sashForm.getSashWidth() - controls.get(0).getBounds().height;
+				newWidth = area.height - sashForm.getSashWidth() - first.getBounds().height;
 			}
 			else {
 				newWidth = area.height - sashForm.getSashWidth() - save;
@@ -323,7 +327,7 @@ class JoSashFormLayout extends Layout {
 			if (newWidth < JoSashForm.DRAG_MINIMUM) {
 				newWidth = JoSashForm.DRAG_MINIMUM;
 				if (save <= 0) {
-					save = controls.get(0).getBounds().height;
+					save = first.getBounds().height;
 				}
 				firstSize = area.height - sashForm.getSashWidth() - JoSashForm.DRAG_MINIMUM;
 			}
@@ -333,43 +337,38 @@ class JoSashFormLayout extends Layout {
 					save = 0;
 				}
 				else {
-					firstSize = controls.get(0).getBounds().height;
+					firstSize = first.getBounds().height;
 				}
 			}
-			controls.get(0).setBounds(area.x, area.y, area.width, firstSize);
+			first.setBounds(area.x, area.y, area.width, firstSize);
 
-			y = area.x + controls.get(0).getBounds().height + sashForm.getSashWidth();
+			y = area.x + first.getBounds().height + sashForm.getSashWidth();
 
-			controls.get(1).setBounds(area.x, y, area.width, newWidth);
+			second.setBounds(area.x, y, area.width, newWidth);
 
-			sash.setBounds(area.x, controls.get(0).getBounds().height, area.width, sashForm.getSashWidth());
+			sash.setBounds(area.x, first.getBounds().height, area.width, sashForm.getSashWidth());
 		}
 
 	}
 
 	private void initialize(final JoSashForm sashForm) {
-		final List<Control> controls = sashForm.getControls();
 		final Rectangle area = sashForm.getClientArea();
-		final int[] weights = sashForm.getWeights();
-		int total = 0;
-		if (controls.size() == 1) {
-			if (controls.get(0) != null) {
-				controls.get(0).setBounds(area);
-				return;
-			}
+		final int firstWeight = sashForm.getFirstWeight();
+		final int secondWeight = sashForm.getSecondWeight();
+		final int total = firstWeight + secondWeight;
+		final Control first = sashForm.getFirst();
+		final Control second = sashForm.getSecond();
+		if (first != null && second == null) {
+			first.setBounds(area);
+			return;
 		}
 
-		for (final int i : weights) {
-			total += i;
-		}
 		int newValue = 0;
 		if (sashForm.getOrientation() == SWT.HORIZONTAL) {
 			int x = 0;
-			newValue = (int) ((area.width * ((float) weights[0] / (float) total)) - ((float) sashForm.getSashWidth() / 2));
-			controls.get(0).setBounds(area.x, area.y, newValue, area.height);
-			x += controls.get(0).getBounds().width;
-
-			sashForm.setSash(sashForm.createSash());
+			newValue = (int) ((area.width * ((float) firstWeight / (float) total)) - ((float) sashForm.getSashWidth() / 2));
+			first.setBounds(area.x, area.y, newValue, area.height);
+			x += first.getBounds().width;
 
 			if (sashForm.getSash() == null) {
 				return;
@@ -380,16 +379,14 @@ class JoSashFormLayout extends Layout {
 
 			x += sashForm.getSashWidth();
 
-			newValue = (int) ((area.width * (((float) weights[1] / (float) total))) - ((float) sashForm.getSashWidth() / 2));
-			controls.get(1).setBounds(x, area.y, newValue, area.height);
+			newValue = (int) ((area.width * (((float) secondWeight / (float) total))) - ((float) sashForm.getSashWidth() / 2));
+			second.setBounds(x, area.y, newValue, area.height);
 		}
 		else if (sashForm.getOrientation() == SWT.VERTICAL) {
 			int y = 0;
-			newValue = (int) ((area.height * ((float) weights[0] / (float) total)) - ((float) sashForm.getSashWidth() / 2));
-			controls.get(0).setBounds(area.x, area.y, area.width, newValue);
-			y += controls.get(0).getBounds().height;
-
-			sashForm.setSash(sashForm.createSash());
+			newValue = (int) ((area.height * ((float) firstWeight / (float) total)) - ((float) sashForm.getSashWidth() / 2));
+			first.setBounds(area.x, area.y, area.width, newValue);
+			y += first.getBounds().height;
 
 			if (sashForm.getSash() == null) {
 				return;
@@ -399,8 +396,8 @@ class JoSashFormLayout extends Layout {
 			sash.setBounds(area.x, y, area.width, sashForm.getSashWidth());
 
 			y += sashForm.getSashWidth();
-			newValue = (int) ((area.height * (((float) weights[1] / (float) total))) - ((float) sashForm.getSashWidth() / 2));
-			controls.get(1).setBounds(area.x, y, area.width, newValue);
+			newValue = (int) ((area.height * (((float) firstWeight / (float) total))) - ((float) sashForm.getSashWidth() / 2));
+			second.setBounds(area.x, y, area.width, newValue);
 		}
 		else {
 			throw new IllegalStateException("Wrong Orientation is set");
